[gd_scene load_steps=6 format=3 uid="uid://desh1w40padq8"]

[ext_resource type="Script" path="res://ui/twitch/feature_entry.gd" id="1_fc2bb"]
[ext_resource type="Texture2D" uid="uid://dbht7ll6ygloq" path="res://ui/bootstrap_icons/caret-down-fill.png" id="2_2kmva"]
[ext_resource type="Texture2D" uid="uid://deuf2rqcfddbn" path="res://ui/bootstrap_icons/caret-right-fill.png" id="3_5onmf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cq6sb"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.5184, 0.59568, 0.72, 0.121569)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing_size = 0.1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0s3od"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.121569)
anti_aliasing_size = 0.1

[node name="FeatureEntry" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 36.0
grow_horizontal = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_cq6sb")
script = ExtResource("1_fc2bb")

[node name="FeatureEntryContents" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="FeatureHeader" type="HBoxContainer" parent="FeatureEntryContents"]
layout_mode = 2

[node name="ButtonFeatureDetails" type="CheckButton" parent="FeatureEntryContents/FeatureHeader"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Show Feature Details"
theme_override_constants/icon_max_width = 20
theme_override_icons/checked = ExtResource("2_2kmva")
theme_override_icons/unchecked = ExtResource("3_5onmf")
icon_alignment = 1
expand_icon = true

[node name="LabelFeatureName" type="Label" parent="FeatureEntryContents/FeatureHeader"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Feature Name"

[node name="LinkDocumentation" type="LinkButton" parent="FeatureEntryContents/FeatureHeader"]
unique_name_in_owner = true
layout_mode = 2
text = "Go to Documentation"

[node name="CheckSelectFeature" type="CheckBox" parent="FeatureEntryContents/FeatureHeader"]
unique_name_in_owner = true
layout_mode = 2

[node name="FeatureDetails" type="PanelContainer" parent="FeatureEntryContents"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0s3od")

[node name="FeatureDetailsContents" type="VBoxContainer" parent="FeatureEntryContents/FeatureDetails"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="LabelDescription" type="Label" parent="FeatureEntryContents/FeatureDetails/FeatureDetailsContents"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Test
Test
Test
"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="toggled" from="FeatureEntryContents/FeatureHeader/ButtonFeatureDetails" to="." method="_on_button_feature_details_toggled"]
[connection signal="toggled" from="FeatureEntryContents/FeatureHeader/CheckSelectFeature" to="." method="_on_check_select_feature_toggled"]
